refactor of downloader, replacing transcriber in app, adding comments

--- a/summ3ry/templates/summary.html
+++ b/summ3ry/templates/summary.html
@@ -20,7 +20,7 @@
         <div class="row justify-content-center">
             <h2>
                 Transcript
-                <a href="{{ path_to_transcript }}">
+                <a href="{{ path_to_transcript }}" id="transcript">
                     ⇩
                 </a>
             </h2>
@@ -34,7 +34,7 @@
         <div class="row justify-content-center">
             <h2>
                 Summary
-                <a href="{{ path_to_summary }}">
+                <a href="{{ path_to_summary }}" id="summary">
                     ⇩
                 </a>
             </h2>
